2006-01-03  Łukasz Stelmach <stlman@poczta.fm>

	Fixes #320727

	* xrdb/Emacs.ad: added more settings to make Emacs' UI mimic better
	GNOME's look & feel.

2006-01-03  jenglish <jenglish@flightlab.com>

	Fixes #130299

	* xrdb/Tk.ad: restores prelight/active/mouse-over feedback for Tk
	buttons, checkbuttons, scrollbars, etc.

2005-12-14  Matthias Clasen  <mclasen@redhat.com>

	Fixes #323895
	
	* gnome-settings-xsettings.c: Support the symbolic colors setting
	in GTK+ 2.10.  

2005-12-12  Philippe Troin <phil@fifi.org>

	Fixes #323690

	* gnome-settings-multimedia-keys.c (update_kbd_cb, init_kbd): don't
	grab keyboard when invalid keys are present in the GConf database.
	
2005-11-21  Jens Granseuer <jensgr@gmx.net>

	Fixes #321778

	* gnome-settings-daemon/gnome-settings-keyboard.c
	(numlock_set_xkb_state, numlock_get_gconf_state): C89 compilation
	fixes.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* gnome-settings-xsettings.c:
	define "Gtk/ShowInputMethodMenu"/"Gtk/ShowUnicodeMenu" xsettings,
	patch by Matthias Clasen (Closes: #319634).
	
2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* actions/acme-volume-dummy.c: (acme_volume_dummy_finalize):
	* actions/acme-volume.c: (acme_volume_class_init),
	(acme_volume_new):
	* clipboard-manager.c: (clipboard_bytes_per_item),
	(clipboard_manager_process_event):
	* gnome-settings-daemon.c:
	(gnome_settings_daemon_spawn_with_input):
	* gnome-settings-default-editor.c: (vfs_change_cb):
	* gnome-settings-keybindings.c: (grab_key):
	* gnome-settings-typing-break.c:
	* gnome-settings-xrdb.c: (scan_ad_directory):
	* gnome-settings-xsettings.c: (type_to_string):
	* xsettings-manager.c: Remove unused code and functions. Mark
	some functions static and fix other compiler warnings.

2005-10-21  Ray Strode  <rstrode@redhat.com>

	Remap buttons on auxillary mice for left-handed 
	mode (bug 314409).

	* gnome-settings-mouse.c  (supports_xinput_devices): new
	function to detect XInput Extension