@@ -1,3 +1,9 @@
+2006-01-11  Scott Reeves <SReeves@novell.com>
+
+	* gnome-settings-sound.c (reload_foreach_cb): only disable sounds
+	for system events.
+	(apply_settings): ditto.
+
 2006-01-03  Łukasz Stelmach <stlman@poczta.fm>
 
 	Fixes #320727
